# AVCapture

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build.sh  settings-example.toml  todos.md  todos.txt
deploy/linux/: deploy.sh  undeploy.sh
deploy/win/: deploy.bat  deploy_task.ps1  undeploy.bat
docs/: refactor-roadmap.md
src/: AppContext.hpp  Settings.cpp  Settings.hpp  main.cpp  pch.h  types.hpp
src/api/: ApiServer.cpp  ApiServer.hpp  HttpSession.cpp  HttpSession.hpp  Router.cpp  Router.hpp
src/core/: MediaRecorder.cpp  MediaRecorder.hpp  RecordingConfig.hpp  RollingSegments.cpp  RollingSegments.hpp
src/core/audio/: AudioCapturer.cpp  AudioCapturer.hpp  AudioConfig.hpp  AudioEncoder.cpp  AudioEncoder.hpp  AudioMixer.cpp  AudioMixer.hpp
src/core/export/: ArtifactExporter.cpp  ArtifactExporter.hpp  VSLogs.cpp  VSLogs.hpp
src/core/storage/: AvioNfsWriter.cpp  AvioNfsWriter.hpp  IFileBackend.hpp  NfsClient.cpp  NfsClient.hpp
src/core/sync/: BugAssembler.cpp  BugAssembler.hpp  SyncMasterServer.cpp  SyncMasterServer.hpp  SyncPlan.hpp  SyncProtocol.hpp  SyncTime.hpp  SyncWorkerClient.cpp  SyncWorkerClient.hpp
src/core/video/: IScreenRecorder.hpp  ScreenRecorderBase.cpp  ScreenRecorderBase.hpp  ScreenRecorderFactory.cpp  VideoConfig.hpp  VideoEncoder.cpp  VideoEncoder.hpp  VideoEncoderQueue.cpp  VideoEncoderQueue.hpp
src/platform/: ScreenRecorderLinux.cpp  ScreenRecorderLinux.hpp  ScreenRecorderWindows.cpp  ScreenRecorderWindows.hpp  WinSessionPowerMonitor.cpp  WinSessionPowerMonitor.hpp
src/tray/: ApiClient.cpp  ApiClient.hpp  ServiceControl.cpp  ServiceControl.hpp  SettingsDialog.cpp  SettingsDialog.hpp  TrayIcon.cpp  TrayIcon.hpp  main.cpp
src/utils/: CircularBuffer.hpp  NetUtils.hpp  assert.hpp  error.hpp  log.hpp  subprocess.hpp  utils.hpp
